@@ -1,10 +1,12 @@
 Begin3
 Title:		hdparm - get/set hard disk parameters
-Version:	3.1
-Entered-date:	30JUL96
+Version:	3.3
+Entered-date:	28FEB97
 Description:	Shell utility to access/tune ioctl features of the
 		linux hard disk and (E)IDE drivers for kernel 1.3.61+.
 		Primary use is for enabling irq-unmasking and IDE multiplemode.
+		v3.3 add -C, -y, -Y flags for power management
+		v3.2 flush buffer cache after -t or -T
 		v3.1 add support for "-p[6789]"
 		v3.0 move cache timings to new -T option
 		v2.9 update author's email addr; document -I option
@@ -19,7 +21,7 @@ Keywords:	ide eide ata ata2 performance kernel cd cdrom disk device driver
 Author:		mlord@pobox.com (Mark Lord)
 Maintained-by:	mlord@pobox.com (Mark Lord)
 Primary-site:	sunsite.unc.edu /pub/Linux/system/Misc
-		13kB hdparm-3.1.tar.gz
+		14kB hdparm-3.3.tar.gz
 		1kB hdparm.lsm
 Alternate-site:	sunsite.unc.edu /pub/Linux/kernel/patches/diskdrives
 Alternate-site:	tsx-11.mit.edu /pub/linux/sources/sbin
